After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 748736 - Nautilus is not showing custom icon & emblem
Nautilus is not showing custom icon & emblem
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: All
3.28.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-05-01 09:07 UTC by Costales
Modified: 2018-06-20 09:27 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Costales 2015-05-01 09:07:12 UTC
FYI In Ubuntu 14.10 is working right with:
nautilus 1:3.10.1
nautilus-data 1:3.10.1

In Ubuntu 15.04 (released 23 April) is not working with:
nautilus 1:3.14.2
nautilus-data 1:3.14.2

Test:
For a folder, check folder:
    costales@VM:~/Desktop$ gvfs-info -a metadata::emblems ~/Documents
    uri: file:///home/costales/Documents
    attributes:
    costales@VM:~/Desktop$

Set an emblem:
    gvfs-set-attribute -t stringv ~/Documents metadata::emblems "folder_emblem_in_progress"

Set an icon:
    gvfs-set-attribute -t string ~/Documents metadata::custom-icon-name "brasero"
BUG: This is overwriting the emblem. But the emblem is there yet:
    costales@VM:~/Desktop$ gvfs-info -a metadata::emblems ~/Documents
    uri: file:///home/costales/Documents
    attributes:
      metadata::emblems: [folder_emblem_in_progress]
    costales@VM:~/Desktop$

Unset icon:
    gvfs-set-attribute -t unset ~/Documents metadata::custom-icon-name
AS YOU CAN SEE: The emblem is there yet.
    gvfs-set-attribute -t unset ~/Documents metadata::emblems

Nautilus should show a custom icon & custom emblem together as in previous versions.

Thanks in advance!
Comment 1 Alexandre Franke 2016-12-11 11:03:06 UTC
I can set a custom icon by right clicking on a file and going to the properties. Is this supposed to be the same thing as what you're trying to do (for the icon part)?
Comment 2 Costales 2016-12-11 11:10:33 UTC
@Alexandre: Both of them, icon & emblem. Not just an icon.
If you set an icon & emblem, the emblem will not appear.
Best regards.
Comment 3 Alexandre Franke 2016-12-12 10:40:35 UTC
So just to make it clear and explicit: if you change the icon (with gvfs-set-attribute) and not the emblems it works alright? The issue is only when you do both in combination?
Comment 4 Costales 2016-12-12 18:03:00 UTC
> if you change the icon and not the emblems it works alright?

Yes.

> The issue is only when you do both in combination?

Yes.
Comment 5 António Fernandes 2017-08-15 08:15:44 UTC
Does this happen in both List view and Icon view? Or only one of the view modes?
Comment 6 António Fernandes 2018-06-19 17:10:39 UTC
This happens in all views and is still reproducible.

I have a patch for this which I've submitted as a merge request: https://gitlab.gnome.org/GNOME/nautilus/merge_requests/254