file: Also add emblems on custom icons

Emblems whose names are in metadata::emblems are added to icons, but
this is not happening if the file also has metadata::custom-icon-name.

This may have been a regression from the last refactoring of the icon
loading code (commits a6b88ebde1eb82cf7692bf1c0a161ff6184e9188 to c123b6056b8a8f41ccdd8219d0f9bd91885141dd).

Make sure to apply emblems on custom icons as well.

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=748736